--- a/css/default.css
+++ b/css/default.css
@@ -11,6 +11,7 @@ body {
     overflow: hidden;
     position: relative;
 
+
 }
 
 html {
@@ -80,34 +81,54 @@ row {
     flex-direction: column;     /* make main axis horizontal (default setting) */
     justify-content: center; /* center items horizontally, in this case */
 
+
 }
 
 
-div#main-container{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+
+#home-gl.gl-reg{
+    -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+    -moz-box-flex: 1;         /* OLD - Firefox 19- */
+    -webkit-flex: 1;          /* Chrome */
+    -ms-flex: 1;              /* IE 10 */
+    flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+
+    flex-wrap: wrap;
+
+    /*max-width: 1024px;*/
+    /*width: 960px;*/
+    /*min-width: 720px;*/
+
+    /*min-height: 540px;*/
+    /*max-height: 720px;*/
+    /*height: 720px;*/
+
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+
     width: 100%;
+    min-width: 100%;
     height:100%;
+    max-height: 100vh;
+    min-height: 320px;
+    pointer-events: none;
+
+
 }
 
 
+    /* Firefox doesn't respect max-width in certain situations */
+#home-gl.gl-ff {
+  
+        width: 960px;
+        
+        /*max-height: 720px;*/
+        height: 600px;
+
+    }
 
 
-#home-gl{
-    flex: 1;
-    flex-direction: inherit;
-    align-self: stretch;
-
-    min-width: 540px;
-    max-width: 960px;
-
-    max-height: 720px;
-    min-height: 180px;
-
-}
 
 .no-pointers{
     pointer-events: none;
@@ -230,9 +251,20 @@ button::-moz-focus-inner{
 
 }
 
-.down-button{
-    z-index:999;
+.down-button, .up-button{
+    z-index:9999;
     min-width: 100%;
+    position: fixed;
+    -webkit-transition: opacity 1.2s ease-in-out;
+    -moz-transition: opacity 1.2s ease-in-out;
+    -o-transition: opacity 1.2s ease-in-out;
+    -ms-transition: opacity 1.2s ease-in-out;
+    transition: opacity 1.2s ease-in-out;
+    background-color: rgba(0,0,0,0.7);
+    height: 90px;
+}
+.down-button button, .up-button button{
+    height: 90px;
 }
 
 
@@ -241,9 +273,7 @@ button::-moz-focus-inner{
     color: #ffbb68;
     font-weight: bold;
     font-size: 40px;
-    height: 50px;
     -moz-transform: rotate(0deg);
-
     -o-transform: rotate(0deg);
 
     -webkit-transform: rotate(0deg);
@@ -252,8 +282,12 @@ button::-moz-focus-inner{
 }
 
 .up-button{
-    z-index:999;
-    min-width: 100%;
+    top: 0;
+    left: 0;
+}
+.down-button{
+    bottom: 0;
+    left: 0;
 }
 
 
@@ -333,4 +367,13 @@ body.home #home{
 }
 
 
+body.portfolio .down-button{
+    opacity: 0;
+    pointer-events: none;
+}
+
+body.home .up-button {
+    opacity: 0;
+    pointer-events: none;
+}
 
